<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_marcar_hecho"
        android:title="@string/marcar_como_hecho"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <!-- Ordenar tareas -->
    <item
        android:id="@+id/action_tarea_duplicada"
        android:title="@string/tarea_duplicada"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <!-- Imprimir -->
    <item
        android:id="@+id/action_imprimir"
        android:title="@string/imprimir"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <!-- Actualice a PRO -->
    <item
        android:id="@+id/action_enfocar"
        android:title="@string/empezar_a_enfocar"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_conpartir"
        android:title="@string/compartir"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <!-- Actualice a PRO -->
    <item
        android:id="@+id/action_eliminar"
        android:title="@string/eliminar"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>