<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityAdministarCat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_admin_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/plomoA1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/administrar_categor_as"
        app:titleTextColor="@android:color/black"/>
    <!-- Agregar Subtarea -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iconAddSubtask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/agregar_subtarea"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_nueva"
            android:textSize="20sp"
            android:textColor="@color/azulA1"
            android:textStyle="bold" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        tools:listitem="@layout/item_rv_categorias" />



</LinearLayout>