<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/white"
    android:elevation="12dp">

    <!-- Contenedor principal en orientación horizontal para incluir la franja y el contenido -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Franja vertical de color en el lado izquierdo -->
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/celesteA1"/>

        <!-- Contenido del CardView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvNombreTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tareas"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tvHoraTarea"
                    android:hint="@string/hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/tvCategoriaTarea"
                    android:hint="@string/categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>