<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/plomoA2"
    tools:context=".activities.ActivityDetalleTarea">
    <!-- Toolbar -->

    <!-- Spinner para las categorías -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dettalle_tarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/plomoA1"
        app:titleTextColor="@color/azulA1"
        android:layout_marginTop="0dp"
        android:elevation="3dp"
        app:title="Detalle de Tarea"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <!-- Campo de texto con información de detalles -->
    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="17dp"/>

    <EditText
        android:id="@+id/tvDetailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:layout_marginBottom="8dp"/>

    <!-- Contenedor para los ítems adicionales -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="50dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/splash"
            android:layout_marginTop="20dp"/>

        <!-- Fecha de Vencimiento -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_marginTop="17dp">

            <ImageView
                android:id="@+id/iconFechaVen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendario_tarea"
                android:contentDescription="@string/fecha_de_vencimiento"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_vencimiento"
                android:textStyle="bold"
                android:textColor="#525356"
                android:textSize="18sp"/>


        </LinearLayout>
        <TextView
            android:id="@+id/fechavencimiento_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_categoria"
            android:padding="6dp"
            android:textAlignment="center"
            android:hint="@string/dd_mm_aaaa"
            android:textColor="#525356"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/splash"
            android:layout_marginTop="20dp"/>

        <!-- Hora y Recordatorio -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:layout_gravity="center"
            android:layout_marginTop="17dp">

            <ImageView
                android:id="@+id/iconHoraRecor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:contentDescription="@string/hora_y_recordatorio"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_y_recordatorio"
                android:textStyle="bold"
                android:textColor="#525356"
                android:textSize="18sp"/>


        </LinearLayout>
        <TextView
            android:id="@+id/hora_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_categoria"
            android:padding="6dp"
            android:textAlignment="center"
            android:hint="@string/hh_mm_tt"
            android:textColor="#525356"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/splash"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

    <!-- Botón flotante -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:src="@drawable/ic_send"
        app:backgroundTint="@color/celesteA1"/>

</LinearLayout>
